--- a/Od/Examples/OdThreadIt/OdThreadIt.csproj
+++ b/Od/Examples/OdThreadIt/OdThreadIt.csproj
@@ -22,38 +22,20 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Od\Obs.js">
-      <Link>Obs.js</Link>
-    </Content>
-    <Content Include="..\Od\Obs.min.js">
-      <Link>Obs.min.js</Link>
-    </Content>
-    <Content Include="..\Od\Od.js">
-      <Link>Od.js</Link>
-    </Content>
-    <Content Include="..\Od\Od.min.js">
-      <Link>Od.min.js</Link>
-    </Content>
     <Content Include="app.css" />
     <Content Include="index.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="..\Od\Obs.ts">
+    <TypeScriptCompile Include="..\..\Od\Obs.ts">
       <Link>Obs.ts</Link>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="..\Od\Od.ts">
+    <TypeScriptCompile Include="..\..\Od\Od.ts">
       <Link>Od.ts</Link>
     </TypeScriptCompile>
     <TypeScriptCompile Include="OdThreadIt.ts" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="..\Od\Obs.js.map">
-      <Link>Obs.js.map</Link>
-    </Content>
-    <Content Include="..\Od\Od.js.map">
-      <Link>Od.js.map</Link>
-    </Content>
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
