Add the minified, bundled version of Obs and Od.

--- a/Od/Od/bundleconfig.json
+++ b/Od/Od/bundleconfig.json
@@ -14,7 +14,8 @@
   {
     "outputFileName": "ObsAndOd.js",
     "inputFiles": [
-      "ObsAndOd.js"
+      "Obs.js",
+      "Od.js"
     ]
   }
 ]
