Why is this so hard?!

--- a/Od/Od/bundleconfig.json
+++ b/Od/Od/bundleconfig.json
@@ -2,8 +2,8 @@
   {
     "outputFileName": "ObsAndOd.js",
     "inputFiles": [
-      "Od.js",
-      "Obs.js"
+      "Obs.js",
+      "Od.js"
     ]
   }
 ]
