Fix a bug in Obs: writing to an observable should not establish a dependency.

--- a/Od/Od/bundleconfig.json
+++ b/Od/Od/bundleconfig.json
@@ -2,8 +2,13 @@
   {
     "outputFileName": "ObsAndOd.js",
     "inputFiles": [
-      "Obs.js",
-      "Od.js"
+      "ObsAndOd.js"
+    ]
+  },
+  {
+    "outputFileName": "Obs.js",
+    "inputFiles": [
+      "Obs.js"
     ]
   }
 ]
