--- a/Od/Tests/TestObs/TestObs.csproj
+++ b/Od/Tests/TestObs/TestObs.csproj
@@ -31,9 +31,6 @@
     <TypeScriptCompile Include="..\..\Od\Obs.ts">
       <Link>Obs.ts</Link>
     </TypeScriptCompile>
-    <TypeScriptCompile Include="..\TestHarness\Test.ts">
-      <Link>Test.ts</Link>
-    </TypeScriptCompile>
     <TypeScriptCompile Include="TestObs.ts" />
   </ItemGroup>
   <ItemGroup>
@@ -72,12 +69,13 @@
   </ProjectExtensions>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptRemoveComments>false</TypeScriptRemoveComments>
-    <TypeScriptSourceMap>True</TypeScriptSourceMap>
+    <TypeScriptSourceMap>False</TypeScriptSourceMap>
     <TypeScriptTarget>ES5</TypeScriptTarget>
     <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
     <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
     <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
-    <TypeScriptModuleKind>None</TypeScriptModuleKind>
+    <TypeScriptModuleKind>
+    </TypeScriptModuleKind>
     <TypeScriptOutFile>app.js</TypeScriptOutFile>
     <TypeScriptOutDir />
     <TypeScriptGeneratesDeclarations>False</TypeScriptGeneratesDeclarations>
