Implement Xhr AJAX library. Amend OdThreadIt to use Elements, Xhr, and Jigsaw (the latter is not yet plumbed in fully). Fixed a couple of bugs that had crept into Od -- I need some extra unit tests!

--- a/Od/Ends/Ends.csproj
+++ b/Od/Ends/Ends.csproj
@@ -33,6 +33,7 @@
     <TypeScriptCompile Include="SelectComponent.ts" />
     <TypeScriptCompile Include="TabComponent.ts" />
     <TypeScriptCompile Include="WithClassName.ts" />
+    <TypeScriptCompile Include="Xhr.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="bundleconfig.json" />
