Include .min.js etc. versions of Od and Obs.

--- a/Od/Od/bundleconfig.json
+++ b/Od/Od/bundleconfig.json
@@ -10,5 +10,11 @@
     "inputFiles": [
       "Obs.js"
     ]
+  },
+  {
+    "outputFileName": "Od.js",
+    "inputFiles": [
+      "Od.js"
+    ]
   }
 ]
