--- a/Od/Od/Od.csproj
+++ b/Od/Od/Od.csproj
@@ -20,17 +20,25 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="Obs.d.ts" />
+    <TypeScriptCompile Include="Od.d.ts" />
     <TypeScriptCompile Include="Od.ts" />
     <TypeScriptCompile Include="Obs.ts" />
+    <Content Include="Obs.js" />
+    <Content Include="Obs.min.js" />
     <Content Include="ObsAndOd.js" />
     <Content Include="ObsAndOd.min.js">
       <DependentUpon>ObsAndOd.js</DependentUpon>
     </Content>
+    <Content Include="Od.js" />
+    <Content Include="Od.min.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="bundleconfig.json" />
+    <Content Include="Obs.js.map" />
+    <Content Include="Od.js.map" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
