--- a/Od/Ends/Ends.csproj
+++ b/Od/Ends/Ends.csproj
@@ -23,15 +23,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Elements.js" />
-    <Content Include="Elements.min.js" />
     <Content Include="Jigsaw.js" />
-    <Content Include="Jigsaw.min.js" />
     <Content Include="Oath.js" />
-    <Content Include="Oath.min.js" />
+    <Content Include="SelectComponent.js" />
     <Content Include="TabComponent.css" />
-    <Content Include="web.config" />
+    <Content Include="TabComponent.js" />
+    <Content Include="WithClassName.js" />
     <Content Include="Xhr.js" />
-    <Content Include="Xhr.min.js" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Elements.ts" />
@@ -44,17 +42,7 @@
     <TypeScriptCompile Include="Xhr.ts" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="bundleconfig.json" />
-    <Content Include="Jigsaw.js.map" />
     <Content Include="Oath.js.map" />
-    <Content Include="Elements.js.map" />
-    <None Include="web.Debug.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <None Include="web.Release.config">
-      <DependentUpon>web.config</DependentUpon>
-    </None>
-    <Content Include="Xhr.js.map" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
@@ -84,11 +72,11 @@
   </ProjectExtensions>
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
     <TypeScriptRemoveComments>false</TypeScriptRemoveComments>
-    <TypeScriptSourceMap>true</TypeScriptSourceMap>
+    <TypeScriptSourceMap>False</TypeScriptSourceMap>
     <TypeScriptTarget>ES5</TypeScriptTarget>
     <TypeScriptJSXEmit>None</TypeScriptJSXEmit>
     <TypeScriptCompileOnSaveEnabled>True</TypeScriptCompileOnSaveEnabled>
-    <TypeScriptNoImplicitAny>False</TypeScriptNoImplicitAny>
+    <TypeScriptNoImplicitAny>True</TypeScriptNoImplicitAny>
     <TypeScriptModuleKind />
     <TypeScriptOutFile>
     </TypeScriptOutFile>
