--- a/Od/Examples/DbMonsterOd/DbMonsterOd.csproj
+++ b/Od/Examples/DbMonsterOd/DbMonsterOd.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.css" />
+    <Content Include="app.js" />
     <Content Include="index.html" />
     <Content Include="web.config" />
   </ItemGroup>
