Fix a bug reported by Mihai which could cause an exception in the anonymous component disposal code.

--- a/Od/Examples/DemoEndsDialogueBox/DemoEndsDialogueBox.csproj
+++ b/Od/Examples/DemoEndsDialogueBox/DemoEndsDialogueBox.csproj
@@ -27,7 +27,7 @@
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="DemoEndsDialogueBoxComponent.ts" />
+    <TypeScriptCompile Include="DemoEndsDialogueBox.ts" />
   </ItemGroup>
   <ItemGroup>
     <None Include="web.Debug.config">
