Fixed the auto-focus when double-clicking a to-do label. Included the app.js as a convenience for others.

--- a/Od/Examples/ToDoMvcOd/ToDoMvcOd.csproj
+++ b/Od/Examples/ToDoMvcOd/ToDoMvcOd.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.css" />
+    <Content Include="app.js" />
     <Content Include="index.html" />
   </ItemGroup>
   <ItemGroup>
